name:              Recursive
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Jason
maintainer:        Jason
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://Recursive.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.User
                     Handler.Home
                     Handler.Topic
                     Handler.Article
                     Handler.Paragraph
                     Handler.Error
                     Misc.Period
                     Misc.Difference
                     Misc.Utils

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DoAndIfThenElse

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.1        && < 1.2
                 , yesod-core                    >= 1.1        && < 1.2
                 , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , yesod-form                    >= 1.1        && < 1.2
                 , yesod-test                    >= 0.3        && < 0.4
                 , clientsession                 >= 0.8        && < 0.9
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-sqlite     >= 1.0        && < 1.1
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.5        && < 1.6
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.3        && < 1.4
                 , data-default
                 , time                          >= 1.4
                 , old-locale
                 , Diff                          >= 0.1.3
                 , yesod-markdown
                 , pandoc

executable         Recursive
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , Recursive
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Recursive
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-sqlite     >= 1.0        && < 1.1
